--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,12 @@
     --font-Dafoe : Mr Dafoe, cursive;
 }
 
+.sidebar-link {
+  @apply flex items-center gap-2 px-4 py-2 rounded-md text-sm text-slate-300 hover:bg-slate-800 hover:text-white transition;
+}
+.active {
+  @apply bg-slate-800 text-white;
+}
 
 /* @layer base {
     body {
